--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3.9'
 
 services:
+
+  java_app:
+    container_name: java_app
+    image: ishmamabid99/java_app:1.0.0
+    build: .
+    ports:
+      - 8080:8080
+    environment:
+      - DATABASE_URL=jdbc:postgresql://java_db:5432/postgres
+      - DATABASE_USERNAME=postgres
+      - DATABASE_PASSWORD=postgres
+    depends_on:
+      - java_db
+
   java_db:
     container_name: java_db
     image: postgres:12
@@ -13,4 +27,4 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 volumes:
-  pgdata: {}
+  pgdata: { }
