--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,11 @@ services:
       - DATABASE_URL=jdbc:postgresql://java_db:5432/postgres
       - DATABASE_USERNAME=postgres
       - DATABASE_PASSWORD=postgres
+      - UPLOAD_BASE_DIR=/app/uploads
     depends_on:
       - java_db
+    volumes:
+      - filestorage:/app/uploads
 
   java_db:
     container_name: java_db
@@ -28,3 +31,4 @@ services:
       - pgdata:/var/lib/postgresql/data
 volumes:
   pgdata: { }
+  filestorage: { }
