--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,4 +31,5 @@ services:
       - pgdata:/var/lib/postgresql/data
 volumes:
   pgdata: { }
-  filestorage: { }
+  filestorage:
+    external: true
