--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 upload.base-dir=${UPLOAD_BASE_DIR}
 app.file.storage.mapping=file:~/app/uploads
+app.jwt.secret=PdDashBoardSecret
+app.jwt.expiration=60000
+app.jwt.refresh.expiration=120000
