--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - filestorage:/app/uploads
 
   java_db:
-    container_name: java_db
+    container_name: java_db_2
     image: postgres:12
     ports:
       - 5432:5432
